# milstian-internet-framework

./: .dir-locals.el  Cargo.toml  README.md
docs/: BENCHMARK.md  ISSUES.md  NGINX.md
examples/: dynamic.rs  static.rs
html/: 404.htm  about.htm  index.htm
html/css/: style.css
src/: lib.rs  mime.rs
src/application_layer/: mod.rs
src/application_layer/http/: mod.rs  request.rs  response.rs
src/application_layer_protocol/http/: request.rs  response.rs
src/request/: http.rs  mod.rs
src/response/: mod.rs
src/response/tcp/: mod.rs
src/response/tcp/http/: error.rs  file_not_found.rs  filesystem.rs  mod.rs
src/response/types/: filesystem.rs  mod.rs
src/response/types/http/: error.rs  file_not_found.rs  filesystem.rs  mod.rs
src/thread/: mod.rs
src/transport_layer/: mod.rs
src/transport_protocol/: http.rs
src/transport_protocol/http/: request.rs  response.rs
tests/: static.rs
