[package]
name = "milstian-internet-framework"
version = "0.1.2"
authors = ["Christian Johansson <christian@cvj.se>"]
description = "A internet framework"
license = "GPL-3.0-only"
repository = "https://github.com/cjohansson/milstian-internet-framework"

[dependencies]
chrono = "0.4"
milstian-http = "0.1.*"